# apps

./: .gitignore  APPS.md  CANON.md  COVERAGE.md  NOTICE  README.md  ROADMAP.md  VOCAB.md  config.json  config.yml
STORE/PAPERS/MAMMOCHAT/: CANON.md  README.md  VOCAB.md  final_latex_stats.json  final_style_inventory.json  main.py  pandoc-header.tex  pyproject.toml  refs_standardized.bib  requirements.txt  setup.cfg  style_inventory.json  style_system_documentation.tex
STORE/PAPERS/MAMMOCHAT/arxiv/: README.md
STORE/PAPERS/MAMMOCHAT/docs/: CANON.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  PIPELINE_SIMPLIFIED.md  README.md  STRUCTURE.md  TOOLS_REFERENCE.md  VOCAB.md
STORE/PAPERS/MAMMOCHAT/scripts/: arxiv_bundle.sh  build.sh
STORE/PAPERS/MAMMOCHAT/src/bib/: __init__.py  cmd_standardize.py  llm_enhancer.py  processor.py  refs.bib  search.py  standardizer.py  utils.py
STORE/PAPERS/MAMMOCHAT/src/cite/: applier.py  consolidator.py  manager.py
STORE/PAPERS/MAMMOCHAT/src/cli/: __init__.py  bib.py  cite.py  comprehensive.py  config.py  style.py  tex.py
STORE/PAPERS/MAMMOCHAT/src/doc/: academic_pipeline.py  metadata_fetcher.py  pipeline.py
STORE/PAPERS/MAMMOCHAT/src/shared/: config.py  models.py  models_enhanced.py  pipeline_config.yaml
STORE/PAPERS/MAMMOCHAT/src/tex/: compiler.py  counter.py  utils.py  (+4 more)
STORE/PAPERS/MAMMOCHAT/tex/: 00_titlepage.tex  01_founders_preface.tex  02_policy_landscape.tex  03_mcode_provenance.tex  04_public_funding_innovation.tex  05_icorps_market.tex  06_empathy_architecture.tex  07_precision_medicine_economy.tex  08_roadmap.tex  09_appendix.tex  CANON.md  README.md  VOCAB.md  config.json  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.tex  preamble.tex  refs.bib
(+242 files in other folders)
