[metadata]
name = white-paper-pipeline
version = 0.1.0
description = Publication-ready LaTeX pipeline with inline citations and Nature-style formatting
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
py_modules = pipeline
python_requires = >=3.9
install_requires =
    bibtexparser>=1.4.0
    PyYAML>=6.0
    scikit-learn>=1.3
    numpy>=1.23
    scipy>=1.10
    requests>=2.31

[options.packages.find]
where = src
include = core, utils, validators

[options.entry_points]
console_scripts =
    wp = pipeline:main
